@@ -243,8 +243,10 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: libpython3.13-stdlib (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Breaks: python3-gdbm-dbg (<< 3.9.9-1~)
-Replaces: python3-gdbm-dbg (<< 3.9.9-1~)
+Breaks: libpython3.13-dbg (<< ${source:Version}),
+  python3-gdbm-dbg (<< 3.12.5-2~), python3-tk-dbg (<< 3.12.5-2~)
+Replaces: libpython3.13-dbg,
+  python3-gdbm-dbg (<< 3.12.5-2~), python3-tk-dbg (<< 3.12.5-2~)
 Description: Debug Build of the Python Interpreter (version 3.13)
  The package holds two things:
  .
@@ -278,3 +280,25 @@ Description: Python Interpreter with complete class library (version 3.13)
  .
  According to the Debian Python policy, this package must not be used in
  build dependencies, dependencies and recommendations.
+
+Package: python3.13-tk
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Enhances: python3.13
+Suggests: tix
+Breaks: python3-tk (<< 3.12.5-2~)
+Replaces: python3-tk (<< 3.12.5-2~)
+XB-Python-Version: 3.13
+Description: Tkinter - Writing Tk applications with Python (v3.13)
+ A module for writing portable GUI applications with Python (v3.13) using Tk.
+ Also known as Tkinter.
+
+Package: python3.13-gdbm
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Enhances: python3.13
+Breaks: python3-gdbm (<< 3.12.5-2~)
+Replaces: python3-gdbm (<< 3.12.5-2~)
+Description: GNU dbm database support for Python (v3.13)
+ GNU dbm database module for Python. Install this if you want to
+ create or read GNU dbm database files with Python.
