@@ -1,7 +1,11 @@
+
 Package: @PVER@-tk
 Architecture: any
-Depends: @PVER@ (= ${Source-Version}), ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Enhances: @PVER@
 Suggests: tix
+Breaks: python3-tk (<< 3.12.5-2~)
+Replaces: python3-tk (<< 3.12.5-2~)
 XB-Python-Version: @VER@
 Description: Tkinter - Writing Tk applications with Python (v@VER@)
  A module for writing portable GUI applications with Python (v@VER@) using Tk.
@@ -9,8 +13,10 @@ Description: Tkinter - Writing Tk applications with Python (v@VER@)
 
 Package: @PVER@-gdbm
 Architecture: any
-Depends: @PVER@ (= ${Source-Version}), ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Enhances: @PVER@
+Breaks: python3-gdbm (<< 3.12.5-2~)
+Replaces: python3-gdbm (<< 3.12.5-2~)
 Description: GNU dbm database support for Python (v@VER@)
  GNU dbm database module for Python. Install this if you want to
  create or read GNU dbm database files with Python.
-
